feat: done phases 8 v1.0
